generated/checkers/gen/AllGen-Misuse-ec1aae190c7729ffdd3603de311dc00f7ff988f9/build_logs/syntax-repair-06/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static const clang::ento::FieldRegion* {anonymous}::SAGenTestChecker::findEnclosingFieldRegion(const clang::ento::MemRegion*)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:65:16: error: ‘const class clang::ento::MemRegion’ has no member named ‘getSuperRegion’; did you mean ‘getBaseRegion’?
   65 |     Cur = Cur->getSuperRegion();
      |                ^~~~~~~~~~~~~~
      |                getBaseRegion
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static bool {anonymous}::SAGenTestChecker::isFieldCounterForAnyCountedByInRecord(const clang::FieldDecl*)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:103:62: error: cannot convert ‘clang::IdentifierInfo*’ to ‘const clang::FieldDecl*’ in initialization
  103 |       if (const FieldDecl *CounterFD = CBA->getCountedByField()) {
      |                                        ~~~~~~~~~~~~~~~~~~~~~~^~
      |                                                              |
      |                                                              clang::IdentifierInfo*
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
